--- a/style/index.css
+++ b/style/index.css
@@ -27,7 +27,8 @@ h1,h2,h3,h4,h5,h6,p{
     padding: 0;
 }
 .main{
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     display: grid;
     grid-template-columns: 1fr;
     grid-auto-rows: 1fr;
