--- a/style/menuSection.css
+++ b/style/menuSection.css
@@ -1,7 +1,6 @@
 .main .restaurant-menu-section{
     display: grid;
-    grid-template-rows: auto 1fr auto
-    ;
+    grid-template-rows: auto 1fr auto;
 }
 .main .restaurant-menu-section .menu-category-section{
     display: flex;
@@ -83,3 +82,132 @@
     font-size: 20px;
     font-weight: 400;
 }
+.services{
+    background: url('../assets/services-background.png');
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 100%;
+}
+.services-section{
+    /* text-align: center; */
+    /* padding: 30px 0; */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    min-height: 400px;
+    max-height: 400px;
+    background-color: rgba(10, 10, 10, 0.5);
+}
+.services-section h1{
+    font-family: 'Hello Ketta Regular';
+    margin-top: 40px;
+    font-size: 60px;
+    font-weight: 200;
+    color: #fff;
+}
+.services-section h5{
+    /* margin-top: 40px; */
+    font-size: 40px;
+    font-weight: 300;
+    color: rgb(255, 208, 0);
+}
+.services-section button{
+    padding: 15px;
+    width: 20%;
+    background-color: #39a30c;
+    border: none;
+    border-radius: 3px;
+    color:#fff;
+    /* margin-right: -150px!important; */
+    /* margin: auto; */
+    font-size: 20px;
+    font-weight: 400;
+    margin-top: 20px;
+}
+
+/* Events Section here */
+.events-section{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+}
+
+.events-section .events-image img{
+   /* min-height: 400px;  */
+   object-fit: cover;
+   max-height: 350px;
+   width: 100%;
+    /* max-height: 100%; */
+    /* object-fit: cover; */
+}
+.events-text{
+   display: grid;
+   grid-template-rows: repeat(2, 1fr);
+   text-align: center;
+   padding: 20px; 
+}
+/* .events-text .events-text-announce{
+    display: flex;
+    flex-direction: column;
+} */
+.events-text .events-text-announce h1{
+    color: #053905;
+    font-weight: 400;
+    font-size: 30px;
+}
+.events-text .events-text-announce div{
+    background-color: #053905;
+    width: 100%;
+    min-height: 1px;
+    margin: 7px 10px;
+}
+.events-text .events-text-announce p{
+    color: #022002;
+    text-align: left;
+    margin: 7px 10px;
+}
+.events-text .events-text-info{
+    text-align: left;
+    /* padding-top: 20px; */
+    /* position: relative; */
+}
+.events-text .events-text-info h1{
+    color: #acffac;
+    font-weight: 200;
+    font-size: 20px;
+    /* width: 50%; */
+    padding: 3px 17px;
+}
+.events-text .events-text-info-h1{
+    background: #002705;
+    display: inline-block;
+    position: relative;
+    margin-top: 20px;
+}
+.events-text .events-text-info-h1::after{
+    content: " ";
+    top: 0;
+    right: -6%;
+    height: 0;
+    width: 0%;
+    position: absolute;
+    /* background: red; */
+    z-index: 5;
+    border-left: 15px solid #002705;
+    border-top: 15px solid transparent;
+    /* border-right: 30px solid blue; */
+    border-bottom: 15px solid transparent
+}
+.events-text .events-text-info ul{
+    font-weight: 300;
+    font-size: 18px;
+    line-height: 30px;
+    margin-top: 20px;
+}
+.events-text .events-text-info ul span{
+    margin: 0 15px;
+    color: var(--primary);
+}
+
+/* Footer Section here */
+
