--- a/style/index.css
+++ b/style/index.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap');
 @import url('header.css');
 @import url('menuSection.css');
-@import url('fontawesome-free-5.15.4-web/css/all.css');
+/* @import url('fontawesome-free-5.15.4-web/css/all.css'); */
 /* @import url('HelloKetta-d99oX.woff'); */
 @font-face {
     font-family: 'Hello Ketta Regular';
