--- a/style/menuSection.css
+++ b/style/menuSection.css
@@ -133,9 +133,9 @@
 }
 
 .events-section .events-image img{
-   /* min-height: 400px;  */
+   min-height: 400px; 
    object-fit: cover;
-   max-height: 350px;
+   max-height: 400px;
    width: 100%;
     /* max-height: 100%; */
     /* object-fit: cover; */
@@ -144,7 +144,7 @@
    display: grid;
    grid-template-rows: repeat(2, 1fr);
    text-align: center;
-   padding: 20px; 
+   padding-top: 20px;
 }
 /* .events-text .events-text-announce{
     display: flex;
@@ -157,17 +157,18 @@
 }
 .events-text .events-text-announce div{
     background-color: #053905;
-    width: 100%;
+    width: 95%;
     min-height: 1px;
-    margin: 7px 10px;
+    margin: 7px auto;
 }
 .events-text .events-text-announce p{
     color: #022002;
     text-align: left;
-    margin: 7px 10px;
+    margin: 7px 30px;
 }
 .events-text .events-text-info{
     text-align: left;
+    margin-top: 20px;
     /* padding-top: 20px; */
     /* position: relative; */
 }
@@ -182,7 +183,7 @@
     background: #002705;
     display: inline-block;
     position: relative;
-    margin-top: 20px;
+    margin-top: 10px;
 }
 .events-text .events-text-info-h1::after{
     content: " ";
@@ -202,7 +203,8 @@
     font-weight: 300;
     font-size: 18px;
     line-height: 30px;
-    margin-top: 20px;
+    margin-top: 10px;
+    margin-left: 20px;
 }
 .events-text .events-text-info ul span{
     margin: 0 15px;
@@ -210,4 +212,83 @@
 }
 
 /* Footer Section here */
+.footer-section{
+    background: #001600;
+    color: var(--primary);
+    font-weight: 200;
+}
+.footer-infos{
+    padding: 30px 10px 20px 15%;
+}
+.footer-section .footer-infos{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    align-items: center;
+    justify-content:center;
+}
+.footer-section .footer-infos .footer-infos-branch h3{
+    font-weight: 300;
+    /* text-align: center; */
+    margin-bottom: 10px;
+}
+.footer-section .footer-infos .footer-infos-branch ul{
+    padding-left: 10px;
+    font-size: 14px;
+    line-height: 25px;
+}
+.footer-section .footer-infos .footer-infos-branch ul span{
+    font-weight: 100;
+    font-size: 10px;
+}
+.footer-section .footer-infos .footer-infos-social{
+    font-size: 30px;
+    /* text-align: center; */
+}
+.footer-section .footer-infos .footer-infos-social a:nth-child(1) span{
+    /* background: aqua !important; */
+    color: rgb(0, 119, 255);
+}
+.footer-section .footer-infos .footer-infos-social a:nth-child(2) span{
+    /* background: aqua !important; */
+    color: rgba(255, 0, 34, 0.76);
+}
+.footer-section .footer-infos .footer-infos-social a:nth-child(3) span{
+    /* background: aqua !important; */
+    color: rgb(255, 0, 0);
+}
+.footer-section .footer-infos .footer-infos-social a:nth-child(5) span{
+    /* background: aqua !important; */
+    color: rgb(0, 38, 255);
+}
+.footer-section .footer-infos .footer-infos-hours h3{
+    font-weight: 300;
+    /* text-align: center; */
+    margin-bottom: 10px;
+}
+.footer-section .footer-infos .footer-infos-hours ul{
+    padding-left: 10px;
+    font-size: 14px;
+    line-height: 25px;
+}
+.footer-section .footer-infos .footer-infos-hours ul span{
+    font-weight: 100;
+    font-size: 10px;
+}
 
+
+.all-rights{
+    text-align: center;
+    padding: 0 !important;
+}
+.all-rights div{
+    width: 70%;
+    height: .5px;
+    border-bottom: 1px solid #002705;
+    margin: auto;
+    /* background: chartreuse; */
+}
+.all-rights p{
+    margin: 20px 0;
+    font-size: 13px;
+    color: #72CB4B;
+}
