--- a/style/header.css
+++ b/style/header.css
@@ -1,62 +1,10 @@
 .main .header-section{
     /* height: 100vh; */
     display: grid;
-    grid-template-rows: 100px 1fr;
+    grid-row: 2/3;
+    /* grid-template-rows: 1fr; */
+    /* grid-template-columns: 1fr 1fr; */
 }
-.main .header-section .nav-main{
-    margin: 0 20px;
-    display: flex;
-    align-items: center;
-}
-.main .header-section .nav-main .logo-container{
-    flex: 1;
-    position: relative;
-    margin-top: 60px;
-    margin-left: 50px;
-}
-.main .header-section .nav-main .nav-container{
-    display: flex;
-    align-items: center;
-}
-.main .header-section .nav-main .nav-icons{
-    display: flex;
-    align-items: center;
-    margin-left: 50px;
-}
-.main .header-section .nav-main .nav-icons img{
-    width: 50%;
-}
-
-/* .main .header-section .nav-main .nav-icons li span{
-    display: block;
-    background-color: #00C41A;
-    height: 20px;
-    width: 2px;
-    margin: 0 2px;
-} */
-.main .header-section .nav-main .nav-container li a{
-    font-size: 15px;
-    font-weight: 600;
-    margin: 0 10px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-.main .header-section .nav-main .nav-container li a::after{
-    content: "";
-    display: block;
-    width: 100%;
-    height: 1px;
-    background-color: var(--primary);
-    transform: scale(0, 1);
-    transition: transform 200ms ease-in;
-    /* transform-origin: left; */
-}
-.main .header-section .nav-main .nav-container li a:hover::after{
-    transform: scale(1, 1);
-}
-
-/* End of Navigation */
 
 .main .hero-main{
     display: grid;
