--- a/style/menuSection.css
+++ b/style/menuSection.css
@@ -1,6 +1,7 @@
 .main .restaurant-menu-section{
     display: grid;
     grid-template-rows: auto 1fr auto;
+    grid-row: 3/4;
 }
 .main .restaurant-menu-section .menu-category-section{
     display: flex;
@@ -87,6 +88,7 @@
     background-size: cover;
     background-repeat: no-repeat;
     width: 100%;
+    grid-row: 5/6;
 }
 .services-section{
     /* text-align: center; */
@@ -130,6 +132,7 @@
 .events-section{
     display: grid;
     grid-template-columns: repeat(2, 1fr);
+    grid-row: 6/7;
 }
 
 .events-section .events-image img{
@@ -216,6 +219,7 @@
     background: #001600;
     color: var(--primary);
     font-weight: 200;
+    grid-row: 7/8;
 }
 .footer-infos{
     padding: 30px 10px 20px 15%;
