--- a/style/index.css
+++ b/style/index.css
@@ -39,6 +39,7 @@ h1,h2,h3,h4,h5,h6,p{
     display: grid;
     /* grid-template-columns: 1fr; */
     grid-template-rows: repeat(6, 1fr);
+    box-sizing: border-box;
     /* grid-auto-rows: 1fr; */
     /* position: relative; */
 }
@@ -106,13 +107,14 @@ h1,h2,h3,h4,h5,h6,p{
 
 /* End of Navigation */
 
-@media (max-width:320px) {
+@media (max-width:420px) {
     .main .nav-main{
         margin: 0 !important;
         flex-direction: column;
-        align-items: none;
+        /* align-items: none; */
         /* position: relative; */
         height: auto !important;
+        background: #abff86;
     }
     .main .nav-main .logo-container{
        /* height: 100px; */
@@ -125,4 +127,145 @@ h1,h2,h3,h4,h5,h6,p{
       position: relative;
       margin: 0 !important;
     }
+
+    .main .nav-main .nav-container{
+        display: none;
+        position: absolute;
+    }
+    .main .nav-main .nav-icons{
+        align-items: flex-end !important;
+        padding: 20px 0;
+    }
+    .main .nav-main .nav-icons li span{
+        margin-right: 10px;
+    }
+    .main .nav-main .nav-icons img{
+        width: 90%;
+    }
+
+
+    .main .hero-main{
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr;
+        position: relative;
+    }
+    .main .hero-main .hero-image-section{
+        position: absolute;
+        width: 100%;
+    }
+    .main .hero-main .hero-image-section img{
+        /* position: absolute; */
+        width: 100%;
+        object-fit: cover;
+        height: 400px;
+    }
+
+    .main .hero-main .hero-text-section{
+        text-align: left;
+        z-index: 3;
+        background: rgba(10, 10, 10, .5);
+    }
+
+    .main .hero-main .hero-text-section h3{
+        color: #fff;
+        font-weight: 300;
+        font-size: 18px;
+    }
+    .main .hero-main .hero-text-section h1{
+        color: #64ff22;
+        font-weight: 500;
+        font-size: 30px;
+        letter-spacing: 5px;
+    }
+    .main .hero-main .hero-text-section p{
+        color: #fff;
+        padding-left: 0;
+        /* padding-right: 50%; */
+        line-height: 20px;
+        font-weight: 300;
+        font-size: 15px;
+    }
+    .main .hero-main .hero-text-section button{
+        background-color: #72CB4B;
+        border: none;
+        width: 170px;
+        padding: 7px 15px;
+        align-self: flex-start;
+        /* transform: translateX(100%); */
+        color: #fff;
+        border-radius: 3px;
+        margin-top: 20px;
+        font-size: 20px;
+    }
+
+
+
+    .main .restaurant-menu-section .menu-category-section{
+        /* display: flex; */
+        flex-direction: column;
+        /* margin: 20px 50px; */
+        padding: 0 0;
+    }
+
+    .main .restaurant-menu-section .menu-text-order h1{
+        font-weight: 400;
+        font-size: 25px;
+        margin-top: 20px;
+    }
+    .main .restaurant-menu-section .menu-text-order h1 span{
+        font-weight: 600;
+    }
+
+    .main .restaurant-menu-section .button-browse-more button{
+        padding: 10px 15px;
+        width: 70%;
+        border-radius: 3px;
+        color:#fff;
+        /* margin-right: -150px!important; */
+        margin: auto;
+        font-size: 20px;
+        font-weight: 400;
+    }
+
+
+
+    .services-section h1{
+        margin-top: 0;
+        font-size: 15px;
+    }
+    .services-section h5{
+        /* margin-top: 40px; */
+        font-size: 27px;
+    }
+    .services-section button{
+        padding: 8px 2px;
+        width: 50%;
+    }
+    
+    /* Events Section here */
+    .events-section{
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr;
+        position: relative;
+    }
+
+    .events-section .events-image{
+       position: absolute;
+       width: 100%;
+     }
+     .events-section .events-image{
+        width: 100%;
+        min-height: auto;
+        object-fit: cover;
+      }
+     .events-text{
+        /* display: grid;
+        grid-template-rows: repeat(2, 1fr);
+        text-align: center;
+        padding-top: 20px; */
+        z-index: 3;
+     }
+    
 }
