--- a/style/index.css
+++ b/style/index.css
@@ -237,6 +237,7 @@ h1,h2,h3,h4,h5,h6,p{
     .services-section h5{
         /* margin-top: 40px; */
         font-size: 27px;
+        text-align: center;
     }
     .services-section button{
         padding: 8px 2px;
@@ -249,22 +250,17 @@ h1,h2,h3,h4,h5,h6,p{
         grid-template-columns: 1fr;
         grid-template-rows: 1fr;
         position: relative;
+        color: #fff;
     }
 
     .events-section .events-image{
        position: absolute;
-       width: 100%;
+       height: 100%;
      }
-     .events-section .events-image{
-        width: 100%;
-        min-height: auto;
-        object-fit: cover;
+     .events-section .events-image img{
+        min-height: 100%;
       }
      .events-text{
-        /* display: grid;
-        grid-template-rows: repeat(2, 1fr);
-        text-align: center;
-        padding-top: 20px; */
         z-index: 3;
      }
     
