--- a/style/menuSection.css
+++ b/style/menuSection.css
@@ -16,6 +16,20 @@
     font-size: 30px;
     margin-top: 20px;
 }
+.sticky{
+    width: 100%;
+    padding-bottom: 10px;
+    margin-bottom: 10px;
+    top: 0;
+    position: fixed;
+    background: #e8fae1;
+    transition: top 2s ease-in;
+    animation: topFixed 300ms;
+}
+@keyframes topFixed{
+    from{ top: 10}
+    to{ top: 0}
+}
 .main .restaurant-menu-section .menu-text-order h1 span{
     font-weight: 600;
 }
