update js and css

--- a/style/index.css
+++ b/style/index.css
@@ -106,7 +106,7 @@ h1,h2,h3,h4,h5,h6,p{
     background-color: var(--primary);
     transform: scale(0, 1);
     transition: transform 200ms ease-in;
-    /* transform-origin: left; */
+    /* transform-origin:top; */
 }
 .main .nav-main .nav-container li a:hover::after{
     transform: scale(1, 1);
